Version 0.12b
-------------------------------------------------------------------------------

   Jared Davis

     Added missing exception specifications to WordStream.h.
     

Version 0.12
-------------------------------------------------------------------------------
   Capitalization changed to Aiksaurus instead of AikSaurus.

   Jared Davis:
   
     Massive overhaul of datafiles, total rewrite of everything.  
     This is a completely new thesaurus.  Synonyms are now grouped
     into meanings classes.  Reduced disk space to roughly 800k 
     uncompressed.  Expanded number of known words by about 40%.
     This is drastically better than before, but not compatible 
     with previous versions.

     Modified Levon's automake stuff to work with the new library.
     Made CommandLineDemo an automatically-installing program 
     named 'aiksaurus'.  Added version and help information to this
     program. 
    

Version 0.11
-------------------------------------------------------------------------------
   Jared Davis:

    Changed demo programs to operate out of AikSaurus default data directory
    so that they will be easy to move around your system.


Version 0.10
-------------------------------------------------------------------------------
   Jared Davis:

    Added count(), word() functions.
    
    Added overloaded next() function that doesn't return part-of-speech
    information.
   
    
Version 0.09
-------------------------------------------------------------------------------
   John Levon:

	Created an automake installer that is much nicer.  This uses libtool
	to generate a shared library and then we just link against that.  

	This is a massive improvement over the old makefile, and the first
	step towards platform independence.

	Fixed the StringLoopQueue.h file to correctly use namespace std::
	which fixed compile errors on g++3.


Version 0.08c
-------------------------------------------------------------------------------
   Jared Davis:
