@@ -105,7 +105,7 @@ Report bugs to <bug-autoconf@gnu.org>."
 ac_cs_version="\
 config.status
 configured by ./configure, generated by GNU Autoconf 2.52,
-  with options \"\"
+  with options \" CXXFLAGS=\"
 
 Copyright 1992, 1993, 1994, 1995, 1996, 1998, 1999, 2000, 2001
 Free Software Foundation, Inc.
@@ -135,8 +135,8 @@ do
   case $1 in
   # Handling of the options.
   -recheck | --recheck | --rechec | --reche | --rech | --rec | --re | --r)
-    echo "running /bin/sh ./configure "  " --no-create --no-recursion"
-    exec /bin/sh ./configure  --no-create --no-recursion ;;
+    echo "running /bin/sh ./configure "  CXXFLAGS= " --no-create --no-recursion"
+    exec /bin/sh ./configure  CXXFLAGS= --no-create --no-recursion ;;
   --version | --vers* | -V )
     echo "$ac_cs_version"; exit 0 ;;
   --he | --h)
@@ -299,7 +299,7 @@ s,@ac_ct_CC@,gcc,;t t
 s,@EXEEXT@,,;t t
 s,@OBJEXT@,o,;t t
 s,@CXX@,g++,;t t
-s,@CXXFLAGS@,-Wall -s -g -O2,;t t
+s,@CXXFLAGS@,-Wall -s ,;t t
 s,@ac_ct_CXX@,g++,;t t
 s,@build@,i686-pc-linux-gnu,;t t
 s,@build_cpu@,i686,;t t
